Fix missing background

--- a/src/ui/styles/app.css
+++ b/src/ui/styles/app.css
@@ -11,10 +11,6 @@ html {
 	cursor: url(/images/cursors/default.png), auto;
 	min-height: 100%;
 	background-color: var(--bg);
-}
-
-html.bg {
-	background-image: url('/images/scenes/moonlit-landscape-1904.jpg');
 	/* background-image: url('/images/scenes/dalle5.webp'); */
 	/* background-position: center bottom; */
 	background-attachment: fixed;
